# resume-jd-matcher

./: README.md  main.py  pyproject.toml
backend/: .env  celeryconfig.py  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/core/: agent_orchestrator.py  agents.py  artifacts.py  async_queue.py  pdf_parser.py  tasks.py
backend/app/models/: job_models.py
backend/worker/: worker.py
frontend/: api_client.py  streamlit_app.py
notebooks/: resume-jd-matcher.ipynb
