[project]
name = "resume-jd-matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery[redis]>=5.5.3",
    "crewai>=0.157.0",
    "fastapi>=0.116.1",
    "flower>=2.0.1",
    "ipykernel>=6.30.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.3",
    "streamlit>=1.48.0",
    "uvicorn>=0.35.0",
]
